[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "reservation-system"
version = "0.1.0"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["W503"]
exclude = [".venv", "__pycache__", "build", "dist"]

[tool.pylint.format]
max-line-length = 88

[tool.pylint.messages_control]
disable = [
  "missing-module-docstring",
  "missing-class-docstring",
  "missing-function-docstring",
  "too-few-public-methods"
]
